sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:27: error: value =+ is not a member of Int
      k=+1
       ^